--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App for tracking weight lifting progress",
   "main": "dist/index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "NODE_ENV=production npm run build:dev",
+    "build:dev": "webpack",
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
