--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build:server": "webpack --config webpack.server.config.js",
     "build:dev": "webpack",
     "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "test": "jest"
   },
   "author": "Anton Astashov",
   "license": "MIT",
   "devDependencies": {
     "@cloudflare/wrangler": "^1.8.4",
     "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
     "@udacity/types-service-worker-mock": "^1.1.2",
@@ -26,11 +28,13 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^25.2.7",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "style-loader": "^1.1.3",
     "tailwindcss": "^1.2.0",
+    "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "types-cloudflare-worker": "^1.1.2",
