--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "NODE_ENV=production npm run build:dev",
     "publish": "wrangler publish --env production",
+    "analyze": "open dist/report.html",
     "build:server": "webpack --config webpack.server.config.js",
     "build:dev": "webpack",
     "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
@@ -47,6 +48,7 @@
     "types-cloudflare-worker": "^1.1.2",
     "typescript": "^3.8.2",
     "webpack": "^4.41.6",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
