--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2015",
-    "lib": ["es2018", "dom", "WebWorker"],
+    "lib": ["esnext", "dom", "WebWorker"],
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
