--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cookie": "^0.4.0",
     "deepmerge": "^4.2.2",
     "jsonwebtoken": "^8.5.1",
-    "preact": "^10.3.2"
+    "preact": "^10.3.2",
+    "uplot": "^1.0.9"
   }
 }
