--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
+    "rollbar": "^2.16.2",
     "style-loader": "^1.1.3",
     "tailwindcss": "^1.2.0",
     "ts-jest": "^25.3.1",
