--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:dev": "webpack",
     "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
     "start": "webpack-dev-server",
-    "start:server": "wrangler dev",
+    "start:server": "wrangler dev --host local-api.liftosaur.com",
     "test": "jest"
   },
   "author": "Anton Astashov",
