--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "App for tracking weight lifting progress",
   "main": "dist/index.js",
   "scripts": {
-    "build": "NODE_ENV=production npm run build:dev",
+    "build": "yarn docs && NODE_ENV=production yarn build:dev",
     "publish": "wrangler publish --env production",
     "analyze": "open dist/report.html",
+    "docs": "generate-md --layout ./src/docs/layout/ --input ./src/docs/content/ --output ./docs",
     "build:server": "webpack --config webpack.server.config.js",
     "build:dev": "webpack",
     "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
@@ -38,6 +39,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.2.7",
+    "markdown-styles": "^3.1.10",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
