--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
     "cypress": "^5.1.0",
+    "cypress-terminal-report": "^2.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
