--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "codemirror": "^5.54.0",
     "cookie": "^0.4.0",
     "deepmerge": "^4.2.2",
+    "dequal": "^2.0.2",
     "fp-ts": "^2.6.2",
     "idb-keyval": "^3.2.0",
     "io-ts": "^2.2.4",
