--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
     "lib": ["esnext", "dom", "WebWorker"],
     "module": "commonjs",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "declaration": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
