--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/node-fetch": "^2.5.7",
+    "@types/upng-js": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "@udacity/types-service-worker-mock": "^1.1.2",
@@ -55,6 +56,7 @@
     "ts-node": "^8.6.2",
     "types-cloudflare-worker": "^1.1.2",
     "typescript": "^3.8.2",
+    "upng-js": "^2.1.0",
     "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
