--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
     "start": "webpack-dev-server",
     "start:server": "wrangler dev --host local-api.liftosaur.com",
+    "migrate": "curl -v -X POST http://local-api.liftosaur.com:8787/api/migrate?key=$KEY",
     "test": "jest"
   },
   "author": "Anton Astashov",
