--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "webpack-dev-server",
     "start:server": "wrangler dev --host local-api.liftosaur.com",
     "migrate": "curl -v -X POST http://local-api.liftosaur.com:8787/api/migrate?key=$KEY",
+    "migrate:prod": "curl -v -X POST http://api.liftosaur.com/api/migrate?key=$KEY",
     "test": "jest"
   },
   "author": "Anton Astashov",
