--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,6 +6,7 @@
     "outDir": "./build",
     "strict": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "jsx": "react",
     "jsxFactory": "h"
   },
