--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "yarn docs && NODE_ENV=production yarn build:dev && yarn blog",
+    "fullbuild": "yarn typecheck && yarn lint && yarn build",
     "publish": "wrangler publish --env production",
     "analyze": "open dist/report.html",
     "docs": "generate-md --layout ./src/docs/layout/ --input ./src/docs/content/ --output ./docs",
     "blog": "eleventy",
     "build:server": "webpack --config webpack.server.config.js",
-    "build:dev": "webpack",
-    "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
+    "build:dev": "webpack && node esbuild.js",
+    "typecheck": "tsc --noEmit --incremental",
+    "lint": "eslint '{src,server,test}/**/*.{ts,tsx}' --cache",
     "start": "webpack-dev-server",
     "trust": "sudo security add-trusted-cert -d -r trustRoot -k /Library/Keychains/System.keychain cert/private.crt",
     "start:https": "webpack-dev-server --https --cert cert/private.pem --key cert/private.key --port 8443",
@@ -35,8 +37,8 @@
     "@types/deepmerge": "^2.2.0",
     "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.9",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "@udacity/types-service-worker-mock": "^1.1.2",
     "autoprefixer": "^9.7.4",
     "babel-eslint": "^10.1.0",
@@ -45,22 +47,26 @@
     "cssnano": "^4.1.10",
     "cypress": "^5.1.0",
     "cypress-terminal-report": "^2.0.0",
-    "eslint": "^6.8.0",
+    "esbuild": "^0.8.44",
+    "eslint": "^7.19.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.2.7",
     "markdown-styles": "^3.1.10",
     "mini-css-extract-plugin": "^0.9.0",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "rollbar": "^2.16.2",
     "style-loader": "^1.1.3",
     "tailwindcss": "^1.2.0",
+    "tailwindcss-cli": "^0.1.2",
     "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "types-cloudflare-worker": "^1.1.2",
-    "typescript": "^3.8.2",
+    "typescript": "^4.1.5",
     "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
