--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "noEmit": true,
     "outDir": "out"
   },
-  "include": ["src/**/*", "server/**/*", "test/**/*"]
+  "include": ["src/**/*", "server/**/*", "lambda/**/*", "liftosaur-cdk/**/*", "test/**/*"]
 }
