--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "migrate:prod": "curl -v -X POST http://api.liftosaur.com/api/migrate?key=$KEY",
     "synctoprod": "curl -v -X POST http://local-api.liftosaur.com:8787/api/synctoprod?ids=$IDS\\&key=$KEY",
     "synctodev": "curl -v -X POST http://local-api.liftosaur.com:8787/api/synctodev?ids=$IDS\\&key=$KEY",
-    "build:lambda": "yarn tsc -p tsconfig.lambda.json",
-    "watch:lambda": "yarn tsc -p tsconfig.lambda.json --watch",
+    "copy:lambda": "mkdir -p ./dist-lambda && cp ./lambda/package*.json ./dist-lambda",
+    "build:lambda": "yarn copy:lambda && yarn tsc -p tsconfig.lambda.json",
+    "watch:lambda": "yarn copy:lambda && yarn tsc -p tsconfig.lambda.json --watch",
     "build-and-start:lambda": "yarn build:lambda && yarn start:lambda",
     "start:lambda": "yarn cdk-synth && yarn sam-start-api",
-    "sam-start-api": "sam local start-api",
+    "sam-start-api": "sam local start-api 2>&1 | tr \"\\r\" \"\\n\"",
     "cdk-synth": "cdk synth --no-staging LiftosaurStackDev > template.yaml",
-    "cdk-deploy": "cdk deploy --all",
+    "cdk-deploy": "yarn build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
     "test": "jest"
   },
   "author": "Anton Astashov",
@@ -77,10 +78,11 @@
     "wrangler-js": "^0.1.11"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.94.0",
-    "@aws-cdk/aws-dynamodb": "^1.94.0",
-    "@aws-cdk/aws-lambda": "^1.94.0",
-    "@aws-cdk/core": "^1.94.0",
+    "@aws-cdk/aws-apigateway": "^1.95.1",
+    "@aws-cdk/aws-dynamodb": "^1.95.1",
+    "@aws-cdk/aws-lambda": "^1.95.1",
+    "@aws-cdk/aws-secretsmanager": "^1.95.1",
+    "@aws-cdk/core": "^1.95.1",
     "codemirror": "^5.54.0",
     "cookie": "^0.4.0",
     "deepmerge": "^4.2.2",
