Change the endpoints to lambda

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "trust": "sudo security add-trusted-cert -d -r trustRoot -k /Library/Keychains/System.keychain cert/private.crt",
     "start:https": "webpack-dev-server --https --cert cert/private.pem --key cert/private.key --port 8443",
     "start:server": "wrangler dev",
-    "migrate": "curl -v -X POST http://local-api.liftosaur.com:8787/api/migrate?key=$KEY",
-    "migrate:prod": "curl -v -X POST http://api.liftosaur.com/api/migrate?key=$KEY",
-    "synctoprod": "curl -v -X POST http://local-api.liftosaur.com:8787/api/synctoprod?ids=$IDS\\&key=$KEY",
-    "synctodev": "curl -v -X POST http://local-api.liftosaur.com:8787/api/synctodev?ids=$IDS\\&key=$KEY",
+    "migrate": "curl -v -X POST http://local-api.liftosaur.com:3000/api/migrate?key=$KEY",
+    "migrate:prod": "curl -v -X POST https://api2.liftosaur.com/api/migrate?key=$KEY",
+    "synctoprod": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctoprod?ids=$IDS\\&key=$KEY",
+    "synctodev": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctodev?ids=$IDS\\&key=$KEY",
     "copy:lambda": "mkdir -p ./dist-lambda && cp ./lambda/package*.json ./dist-lambda",
     "build:lambda": "yarn copy:lambda && yarn tsc -p tsconfig.lambda.json",
     "watch:lambda": "yarn copy:lambda && yarn tsc -p tsconfig.lambda.json --watch",
