--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "migrate:prod": "curl -v -X POST https://api2.liftosaur.com/api/migrate?key=$KEY",
     "synctoprod": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctoprod?ids=$IDS\\&key=$KEY",
     "synctodev": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctodev?ids=$IDS\\&key=$KEY",
-    "copy:lambda": "mkdir -p ./dist-lambda && cp ./lambda/package*.json ./dist-lambda",
+    "copy:lambda": "mkdir -p ./dist-lambda && cp ./lambda/package*.json ./dist-lambda && cp -r ./lambda/images ./dist-lambda",
     "build:lambda": "yarn copy:lambda && yarn tsc -p tsconfig.lambda.json",
     "watch:lambda": "yarn copy:lambda && yarn tsc -p tsconfig.lambda.json --watch",
     "build-and-start:lambda": "yarn build:lambda && yarn start:lambda",
@@ -59,6 +59,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.2.7",
+    "jimp": "^0.16.1",
     "markdown-styles": "^3.1.10",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
