Add faster dev server for lambda

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:dev": "webpack",
     "lint": "tsc --listFiles | grep -v 'node_modules' | xargs eslint",
     "start": "webpack-dev-server",
+    "start:server": "IMGPREFIX=lambda/ yarn ts-node-dev --files --poll -T devserver.ts",
     "trust": "sudo security add-trusted-cert -d -r trustRoot -k /Library/Keychains/System.keychain cert/private.crt",
     "start:https": "webpack-dev-server --https --cert cert/private.pem --key cert/private.key --port 8443",
     "migrate": "curl -v -X POST http://local-api.liftosaur.com:3000/api/migrate?key=$KEY",
@@ -56,8 +57,10 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.2.7",
     "jimp": "^0.16.1",
+    "lambda-local": "^1.7.4",
     "markdown-styles": "^3.1.10",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-fetch": "^2.6.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "rollbar": "^2.16.2",
@@ -66,6 +69,7 @@
     "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^3.8.2",
     "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.7.0",
