Allow lambda to send emails

--- a/package.json
+++ b/package.json
@@ -77,13 +77,14 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.97.0",
-    "@aws-cdk/aws-certificatemanager": "^1.97.0",
-    "@aws-cdk/aws-dynamodb": "^1.97.0",
-    "@aws-cdk/aws-lambda": "^1.97.0",
-    "@aws-cdk/aws-s3": "^1.97.0",
-    "@aws-cdk/aws-secretsmanager": "^1.97.0",
-    "@aws-cdk/core": "^1.97.0",
+    "@aws-cdk/aws-apigateway": "^1.116.0",
+    "@aws-cdk/aws-certificatemanager": "^1.116.0",
+    "@aws-cdk/aws-dynamodb": "^1.116.0",
+    "@aws-cdk/aws-iam": "^1.116.0",
+    "@aws-cdk/aws-lambda": "^1.116.0",
+    "@aws-cdk/aws-s3": "^1.116.0",
+    "@aws-cdk/aws-secretsmanager": "^1.116.0",
+    "@aws-cdk/core": "^1.116.0",
     "codemirror": "^5.54.0",
     "cookie": "^0.4.0",
     "deepmerge": "^4.2.2",
