--- a/lambda/package.json
+++ b/lambda/package.json
@@ -15,6 +15,7 @@
     "node-fetch": "^2.6.1",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
+    "prismjs": "^1.25.0",
     "rollbar": "^2.21.1",
     "source-map-support": "^0.5.19",
     "uplot": "^1.6.8",
