Add deepmerge to lambda's package.json

--- a/lambda/package.json
+++ b/lambda/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "cookie": "^0.4.1",
+    "deepmerge": "^4.2.2",
     "fp-ts": "^2.9.5",
     "io-ts": "^2.2.16",
     "jimp": "^0.16.1",
