WIP: React Native

--- a/package.json
+++ b/package.json
@@ -43,11 +43,15 @@
     "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/prismjs": "^1.16.6",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "autoprefixer": "^9.7.4",
     "aws-sdk": "^2.867.0",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-react-native-web": "^0.18.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
@@ -60,6 +64,7 @@
     "jimp": "^0.16.1",
     "lambda-local": "^1.7.4",
     "markdown-styles": "^3.1.10",
+    "metro-react-native-babel-preset": "^0.71.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-fetch": "^2.6.1",
     "postcss-loader": "^3.0.0",
@@ -72,6 +77,7 @@
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2",
+    "url-loader": "^4.1.1",
     "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
@@ -86,6 +92,8 @@
     "@aws-cdk/aws-s3": "^1.116.0",
     "@aws-cdk/aws-secretsmanager": "^1.116.0",
     "@aws-cdk/core": "^1.116.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "codemirror": "^5.54.0",
     "cookie": "^0.4.0",
     "deepmerge": "^4.2.2",
@@ -94,9 +102,14 @@
     "io-ts": "^2.2.4",
     "jsonwebtoken": "^8.5.1",
     "lens-shmens": "^1.0.3",
-    "preact": "^10.5.13",
-    "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-native": "^0.68.2",
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^3.13.1",
+    "react-native-web": "^0.18.0",
     "uplot": "^1.0.9",
     "yatro": "^0.2.3"
   }
