--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,7 @@
     "sourceMap": true,
     "pretty": true,
     "strict": true,
-    "jsx": "react",
-    "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment",
+    "jsx": "react-native",
     "skipLibCheck": true,
     "noEmit": true,
     "outDir": "out",
