--- a/lambda/package.json
+++ b/lambda/package.json
@@ -18,6 +18,7 @@
     "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
     "rollbar": "^2.21.1",
+    "rsa-pem-from-mod-exp": "^0.8.5",
     "source-map-support": "^0.5.19",
     "uplot": "^1.6.8",
     "yatro": "^0.2.3"
