--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
+    "rsa-pem-from-mod-exp": "^0.8.5",
     "uplot": "^1.0.9",
     "yatro": "^0.2.3"
   }
