--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-plugin-rss": "^1.1.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.6",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@types/aws-lambda": "^8.10.72",
     "@types/codemirror": "^0.0.96",
@@ -49,6 +51,7 @@
     "autoprefixer": "^9.7.4",
     "aws-sdk": "^2.867.0",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.2",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
@@ -73,10 +76,10 @@
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2",
-    "webpack": "^4.41.6",
-    "webpack-bundle-analyzer": "^3.7.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.7.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.116.0",
@@ -95,11 +98,12 @@
     "io-ts": "^2.2.4",
     "jsonwebtoken": "^8.5.1",
     "lens-shmens": "^1.0.3",
+    "mock-match-media": "^0.4.2",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
     "rsa-pem-from-mod-exp": "^0.8.5",
-    "uplot": "^1.0.9",
+    "uplot": "^1.6.23",
     "yatro": "^0.2.3"
   }
 }
