--- a/lambda/package.json
+++ b/lambda/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "lens-shmens": "^1.0.3",
     "node-fetch": "^2.6.1",
+    "openai": "^3.2.1",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
