--- a/lambda/package.json
+++ b/lambda/package.json
@@ -15,6 +15,8 @@
     "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "lens-shmens": "^1.0.3",
+    "micromark": "^2.11.4",
+    "micromark-extension-gfm": "^0.3.3",
     "node-fetch": "^2.6.1",
     "openai": "^3.2.1",
     "preact": "^10.5.13",
