--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/prismjs": "^1.16.6",
+    "@types/upng-js": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "autoprefixer": "^9.7.4",
@@ -111,6 +112,7 @@
     "prismjs": "^1.25.0",
     "rsa-pem-from-mod-exp": "^0.8.5",
     "uplot": "^1.6.23",
+    "upng-js": "^2.1.0",
     "yatro": "^0.2.3"
   }
 }
