--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "jest"
   },
   "author": "Anton Astashov",
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-plugin-rss": "^1.1.0",
@@ -51,7 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "autoprefixer": "^9.7.4",
-    "aws-sdk": "^2.867.0",
+    "aws-sdk": "^2.1395.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "copy-webpack-plugin": "^5.1.1",
@@ -85,16 +85,10 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.203.0",
-    "@aws-cdk/aws-certificatemanager": "^1.203.0",
-    "@aws-cdk/aws-dynamodb": "^1.203.0",
-    "@aws-cdk/aws-iam": "^1.203.0",
-    "@aws-cdk/aws-lambda": "^1.203.0",
-    "@aws-cdk/aws-s3": "^1.203.0",
-    "@aws-cdk/aws-secretsmanager": "^1.203.0",
-    "@aws-cdk/core": "^1.203.0",
     "@lezer/lr": "^1.3.4",
+    "aws-cdk-lib": "^2.83.1",
     "codemirror": "^5.54.0",
+    "constructs": "^10.2.49",
     "cookie": "^0.4.0",
     "deepmerge": "^4.2.2",
     "dequal": "^2.0.2",
