--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@lezer/generator": "^1.2.3",
     "@types/aws-lambda": "^8.10.72",
-    "@types/codemirror": "^0.0.96",
     "@types/cookie": "^0.3.3",
     "@types/deepmerge": "^2.2.0",
     "@types/jest": "^25.2.1",
@@ -85,9 +84,15 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@lezer/lr": "^1.3.4",
+    "@codemirror/autocomplete": "^6.8.1",
+    "@codemirror/commands": "^6.2.4",
+    "@codemirror/language": "^6.8.0",
+    "@codemirror/state": "^6.2.1",
+    "@codemirror/view": "^6.14.0",
+    "@lezer/highlight": "^1.1.6",
+    "@lezer/lr": "^1.3.7",
     "aws-cdk-lib": "^2.83.1",
-    "codemirror": "^5.54.0",
+    "codemirror": "^6.0.1",
     "constructs": "^10.2.49",
     "cookie": "^0.4.0",
     "deepmerge": "^4.2.2",
