--- a/lambda/package.json
+++ b/lambda/package.json
@@ -6,6 +6,12 @@
   "author": "Anton Astashov",
   "license": "MIT",
   "dependencies": {
+    "@codemirror/autocomplete": "^6.8.1",
+    "@codemirror/commands": "^6.2.4",
+    "@codemirror/language": "^6.8.0",
+    "@codemirror/search": "^6.5.0",
+    "@codemirror/state": "^6.2.1",
+    "@codemirror/view": "^6.14.1",
     "@lezer/lr": "^1.3.4",
     "cookie": "^0.4.1",
     "deepmerge": "^4.2.2",
