--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/deepmerge": "^2.2.0",
     "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.9",
+    "@types/papaparse": "^5.3.7",
     "@types/prismjs": "^1.16.6",
     "@types/upng-js": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
@@ -107,6 +108,7 @@
     "micromark-extension-gfm": "^0.3.3",
     "mock-match-media": "^0.4.2",
     "openai": "^3.2.1",
+    "papaparse": "^5.4.1",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
