Add QR codes when generating a clipboard link

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/jsonwebtoken": "^8.3.9",
     "@types/papaparse": "^5.3.7",
     "@types/prismjs": "^1.16.6",
+    "@types/qrcode": "^1.5.3",
     "@types/upng-js": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
@@ -112,6 +113,7 @@
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
+    "qrcode": "^1.5.3",
     "rollbar": "^2.26.2",
     "rsa-pem-from-mod-exp": "^0.8.5",
     "uplot": "^1.6.23",
