--- a/lambda/package.json
+++ b/lambda/package.json
@@ -29,6 +29,7 @@
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
+    "qrcode": "^1.5.3",
     "rollbar": "^2.26.2",
     "rsa-pem-from-mod-exp": "^0.8.5",
     "source-map-support": "^0.5.19",
