Switch from Jest to Mocha

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "sam-start-api": "sam local start-api --skip-pull-image 2>&1 | tr \"\\r\" \"\\n\"",
     "cdk-synth": "cdk synth --no-staging LiftosaurStackDev > template.yaml",
     "cdk-deploy": "yarn build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
-    "test": "jest"
+    "test": "mocha -r ts-node/register test/**/*.test.ts"
   },
   "author": "Anton Astashov",
   "license": "AGPL-3.0",
@@ -43,10 +43,11 @@
     "@lezer/generator": "^1.2.3",
     "@playwright/test": "^1.36.0",
     "@types/aws-lambda": "^8.10.72",
+    "@types/chai": "^4.3.11",
     "@types/cookie": "^0.3.3",
     "@types/deepmerge": "^2.2.0",
-    "@types/jest": "^25.2.1",
     "@types/jsonwebtoken": "^8.3.9",
+    "@types/mocha": "^10.0.6",
     "@types/papaparse": "^5.3.7",
     "@types/prismjs": "^1.16.6",
     "@types/qrcode": "^1.5.3",
@@ -57,6 +58,7 @@
     "aws-sdk": "^2.1395.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
+    "chai": "^4.3.10",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
@@ -66,17 +68,16 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.2.7",
     "jimp": "^0.16.1",
     "lambda-local": "^1.7.4",
     "markdown-styles": "^3.1.10",
     "mini-css-extract-plugin": "^0.9.0",
+    "mocha": "^10.2.0",
     "node-fetch": "^2.6.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "style-loader": "^1.1.3",
     "tailwindcss": "^1.2.0",
-    "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.1.6",
