--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/papaparse": "^5.3.7",
     "@types/prismjs": "^1.16.6",
     "@types/qrcode": "^1.5.3",
+    "@types/sinon": "^17.0.2",
     "@types/upng-js": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
@@ -76,6 +77,7 @@
     "node-fetch": "^2.6.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
+    "sinon": "^17.0.1",
     "style-loader": "^1.1.3",
     "tailwindcss": "^1.2.0",
     "ts-loader": "^6.2.1",
