--- a/lambda/package.json
+++ b/lambda/package.json
@@ -9,6 +9,7 @@
     "@codemirror/autocomplete": "^6.8.1",
     "@codemirror/commands": "^6.2.4",
     "@codemirror/language": "^6.8.0",
+    "@codemirror/lint": "^6.4.2",
     "@codemirror/search": "^6.5.0",
     "@codemirror/state": "^6.2.1",
     "@codemirror/view": "^6.14.1",
