Add source map uploading to Rollbar

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "start:lambda": "yarn cdk-synth && yarn sam-start-api",
     "sam-start-api": "sam local start-api --skip-pull-image 2>&1 | tr \"\\r\" \"\\n\"",
     "cdk-synth": "cdk synth --no-staging LiftosaurStackDev > template.yaml",
-    "cdk-deploy": "yarn build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
+    "upload-source-maps": "NODE_ENV=production yarn build:dev && ./uploadsourcemaps.sh",
+    "cdk-deploy": "yarn upload-source-maps && yarn build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
     "test": "mocha -r ts-node/register test/**/*.test.ts"
   },
   "author": "Anton Astashov",
