--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "cdk-synth": "cdk synth --no-staging LiftosaurStackDev > template.yaml",
     "upload-source-maps": "NODE_ENV=production yarn build:dev && ./uploadsourcemaps.sh",
     "cdk-deploy": "yarn upload-source-maps && yarn build:lambda && rm -rf ./dist-lambda/node_modules && cdk deploy --all",
-    "test": "mocha -r ts-node/register test/**/*.test.ts"
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "onetest": "TS_NODE_TRANSPILE_ONLY=1 yarn mocha -r ts-node/register"
   },
   "author": "Anton Astashov",
   "license": "AGPL-3.0",
