--- a/lambda/package.json
+++ b/lambda/package.json
@@ -14,6 +14,7 @@
     "@codemirror/state": "^6.2.1",
     "@codemirror/view": "^6.14.1",
     "@lezer/lr": "^1.3.4",
+    "aws-sdk": "^2.1603.0",
     "cookie": "^0.4.1",
     "deepmerge": "^4.2.2",
     "dequal": "^2.0.3",
